add email sender

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,11 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "dotenv>=0.9.9",
+    "langchain-core>=0.3.74",
+    "langchain-openai>=0.3.30",
+    "pillow>=11.3.0",
+    "pydantic>=2.11.7",
+    "pytest>=8.4.1",
+]
