--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,5 +9,6 @@ dependencies = [
     "gradio>=5.42.0",
     "langchain-core>=0.3.74",
     "langchain-openai>=0.3.30",
+    "pillow>=11.3.0",
     "pydantic>=2.11.7",
 ]
